--- a/view/index.ejs
+++ b/view/index.ejs
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="icon" href="images/logo.png">
+    <link rel="icon" href="/Images/logo.png">
     <meta name="description" content="The best Minectaft network!">
     <meta name="author" content="zAukz">
 
-    <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="css/pages/home.css">
+    <link rel="stylesheet" href="/CSS/global.css">
+    <link rel="stylesheet" href="/CSS/pages/home.css">
 
     <title>RT Network | Home</title>
 </head>
