--- a/view/index.ejs
+++ b/view/index.ejs
@@ -20,7 +20,7 @@
         <div class="menu-mobile">
             <a href="index.html">
                 <div class="logo">
-                    <img src="images/logo.png" alt="Server logo" class="logo-img">
+                    <img src="/Images/logo.png" alt="Server logo" class="logo-img">
                     <h3 class="server-name">RT Network</h3>
                 </div>
             </a>
@@ -32,9 +32,9 @@
 
         <div class="links">
             <a href="#" class="link active">Home</a>
-            <a href="rules.html" class="link">Rules</a>
-         <!--   <a href="staff.html" class="link">Staff</a> -->
-            <a href="requests.html" class="link">Requests</a>
+            <a href="rules.ejs" class="link">Rules</a>
+         <!--   <a href="staff.ejs" class="link">Staff</a> -->
+            <a href="requests.ejs" class="link">Requests</a>
         </div>
     </div>
 
@@ -59,7 +59,7 @@
             </div>
 
             <div class="right">
-                <img src="images/logo.png" alt="Server logo" class="logo-img logo-img-header">
+                <img src="/Images/logo.png" alt="Server logo" class="logo-img logo-img-header">
 
                 <div class="stats">
                     <div class="stat">
@@ -96,7 +96,7 @@
             </div>
 
             <div class="right">
-                <img src="images/zaukz-skin.png" alt="Minecraft person", style="margin-right: -80px;margin-bottom:-15px;width:150px;height:350px;">
+                <img src="/Images/zaukz-skin.png" alt="Minecraft person", style="margin-right: -80px;margin-bottom:-15px;width:150px;height:350px;">
                 <div class="img-background" style="width:190px;height:190px;"></div>
             </div>
         </div>
@@ -106,7 +106,7 @@
     <section id="minigames">
         <div class="content miniGames-list">
             <div class="game">
-                <img src="images/survival-minigames-image.jpg" alt="Survival image">
+                <img src="/Images/survival-minigames-image.jpg" alt="Survival image">
 
                 <div class="info">
                     <h2 class="section-title">Factions</h2>
@@ -123,7 +123,7 @@
             </div>
 
        <!--     <div class="game">
-                <img src="images/survival-minigames-image.jpg" alt="Survival image">
+                <img src="/Images/survival-minigames-image.jpg" alt="Survival image">
 
                 <div class="info">
                     <h2 class="section-title">SkyBlock</h2>
