--- a/view/requests.ejs
+++ b/view/requests.ejs
@@ -31,9 +31,9 @@
     </div>
 
     <div class="links">
-      <a href="index.html" class="link">Home</a>
-      <a href="rules.html" class="link">Rules</a>
-    <!--  <a href="staff.html" class="link">Staff</a> -->
+      <a href="index.ejs" class="link">Home</a>
+      <a href="rules.ejs" class="link">Rules</a>
+    <!--  <a href="staff.ejs" class="link">Staff</a> -->
       <a href="#" class="link active">Requests</a>
     </div>
   </div>
